# taxis-data-DPT

./: .gitignore  load_data.py  pyproject.toml
dashboard/: charts.py  dashboard.py  data_loader.py  styles.css
src/: dashboard.py  transform_and_dump_parquet.py  transform_query.sql
src/bronze/: load_data.py
src/gold/: metrics.sql
src/silver/: tranform_to_silver.py  transform.sql
