[project]
name = "taxis-data-dpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.1",
    "fastparquet>=2026.3.0",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "tqdm>=4.67.3",
    "streamlit>=1.40.0",
    "plotly>=6.0.0"
]
